# octopus-appchain-anchor

./: .gitignore  Cargo.toml  README.md  build.sh  change_notes.md  implementation_detail.md  package.json  test.sh
.github/workflows/: deploy_testnet_barnacle.yml
appchain-anchor/: Cargo.toml
appchain-anchor/src/: anchor_event_histories.rs  anchor_events.rs  anchor_viewer.rs  appchain_lifecycle.rs  appchain_lifecycle_manager.rs  appchain_message.rs  appchain_message_processing_results.rs  appchain_messages.rs  appchain_notification_histories.rs  beefy_light_client_state.rs  indexed_histories.rs  interfaces.rs  lib.rs  lookup_array.rs  message_decoder.rs  near_fungible_token.rs  near_fungible_tokens.rs  nep141_token.rs  owner_actions.rs  permissionless_actions.rs  protocol_settings.rs  reward_distribution_records.rs  settings_manager.rs  staking.rs  staking_history.rs  storage_key.rs  storage_migration.rs  sudo_actions.rs  token_bridging.rs  token_bridging_history.rs  types.rs  upgrade.rs  user_staking_histories.rs  validator_actions.rs  validator_profiles.rs  validator_set.rs  wrapped_appchain_token.rs
appchain-anchor/src/appchain_challenge/: equivocation_challenge.rs  mod.rs
appchain-anchor/src/assets/: mod.rs  native_near_token.rs  near_fungible_tokens.rs  wrapped_appchain_nfts.rs  wrapped_appchain_token.rs  wrapped_non_fungible_tokens.rs
appchain-anchor/src/permissionless_actions/: distributing_rewards.rs  mod.rs  switching_era.rs
appchain-anchor/src/user_actions/: appchain_agent_actions.rs  appchain_lifecycle.rs  mod.rs  owner_actions.rs  settings_manager.rs  staking.rs  sudo_actions.rs  testnet_actions.rs  validator_actions.rs
appchain-anchor/src/validator_set/: mod.rs  next_validator_set.rs  validator_set_of_era.rs
appchain-anchor/tests/: test_anchor_actions.rs  test_beefy_light_client.rs  test_beefy_light_client_2.rs  test_wrapped_appchain_token.rs
appchain-anchor/tests/anchor_viewer/: mod.rs
appchain-anchor/tests/common/: mod.rs
appchain-anchor/tests/lifecycle_actions/: mod.rs
appchain-anchor/tests/oct_token_viewer/: mod.rs
appchain-anchor/tests/owner_actions/: mod.rs
appchain-anchor/tests/permissionless_actions/: mod.rs
appchain-anchor/tests/settings_actions/: mod.rs
appchain-anchor/tests/staking_actions/: mod.rs
appchain-anchor/tests/sudo_actions/: mod.rs
appchain-anchor/tests/token_viewer/: mod.rs
appchain-anchor/tests/wrapped_appchain_token_manager/: mod.rs
beefy-light-client/: Cargo.toml
beefy-light-client/src/: commitment.rs  header.rs  lib.rs  mmr.rs  simplified_mmr.rs  validator_set.rs
e2e-tests/: anchor-methods.js  config.js  get-config.js  main.test.js  oct-methods.js  test_environment.js  utils.js
e2e-tests/nearkeys/testnet/: e2e-test.testnet.json
mock-appchain-registry/: Cargo.toml
mock-appchain-registry/src/: lib.rs
mock-oct-token/: Cargo.toml
mock-wrapped-appchain-token/: Cargo.toml
mock-wrapped-appchain-token/src/: lib.rs
native-near-token-receiver/: Cargo.toml
native-near-token-receiver/src/: lib.rs
near-vault/: Cargo.toml
near-vault/src/: lib.rs
scripts/ci/: deploy_testnet.sh
scripts/cli-samples/: 2.1.0-2.1.1_testnet.sh  2.1.0-2.2.0_testnet.sh  2.2.0-2.3.0_testnet.sh  deploy_and_migrate.sh  deploy_to_dev.sh  deploy_to_mainnet.sh  deploy_to_testnet.sh  reset_state.sh  store_wasm.sh  view_contract.sh
test-nep141-token/: Cargo.toml
test-nep141-token/src/: lib.rs
tests/sim/: main.rs  utils.rs
tests/simulator/: common.rs  main.rs  owner_actions.rs  settings_manager.rs  test_anchor_actions.rs  test_beefy_light_client.rs  test_beefy_light_client_1.rs  test_beefy_light_client_2.rs  test_equivocation_challenge.rs  test_migration.rs  test_sync_staking_amount.rs  test_transfer_native_near.rs  test_transfer_nft.rs  test_transfer_oct_to_appchain.rs  test_wrapped_appchain_token.rs  token_viewer.rs  wrapped_appchain_nft_manager.rs  wrapped_appchain_token_manager.rs
tests/simulator/anchor_viewer/: mod.rs
tests/simulator/common/: basic_actions.rs  complex_actions.rs  complex_viewer.rs  mod.rs
tests/simulator/contract_interfaces/: anchor_viewer.rs  lifecycle_actions.rs  mod.rs  native_near_token.rs  near_fungible_token_manager.rs  permissionless_actions.rs  settings_manager.rs  staking_actions.rs  sudo_actions.rs  validator_actions.rs  wrapped_appchain_nft_manager.rs  wrapped_appchain_token_manager.rs
tests/simulator/staking_actions/: mod.rs
tests/simulator/validator_actions/: mod.rs
wat-faucet/: Cargo.toml
wat-faucet/src/: lib.rs
