[package]
name = "octopus-appchain-anchor"
version = "0.1.0"
authors = ["Octopus Network"]
edition = "2018"

[dev-dependencies]
near-sdk = "=3.1.0"
near-contract-standards = "3.1.0"
near-sdk-sim = "=3.1.0"

test-nep141-token = { path = "./test-nep141-token" }
appchain-anchor = { path = "./appchain-anchor" }

[workspace]
members = ["test-nep141-token", "appchain-anchor"]