[package]
name = "appchain-anchor-wrapper"
version = "2.1.0"
authors = ["Octopus Network"]
edition = "2018"

[dev-dependencies]
hex-literal = "0.3.1"
near-sdk = "4.0.0-pre.7"
near-sdk-sim = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
hex = "0.4.2"
num-format = "0.4.0"
secp256k1-test = { package = "secp256k1", version = "0.20.3", features = ["rand-std", "recovery"] }
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client", branch = "v2.0.0" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", features = ["keccak"], default-features = false }
# remember to include related mock contracts
appchain-anchor = { path = "./appchain-anchor" }
mock-appchain-registry = { path = "./mock-appchain-registry" }
mock-oct-token = { path = "./mock-oct-token" }
wrapped-appchain-token = { git = "https://github.com/octopus-network/wrapped-appchain-token", branch = "v2.0.0" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
    "appchain-anchor",
    "mock-appchain-registry",
    "mock-oct-token",
]
