[package]
name = "appchain-anchor"
version = "2.0.0"
authors = ["Octopus Network"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client" }
near-sdk = "4.0.0-pre.7"
near-contract-standards = "4.0.0-pre.7"
hex = "0.4.2"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
getrandom = { version = "0.2", features = ["custom"] }
ed25519-dalek = { version = "1.0.1", features = ["alloc"] }

[dev-dependencies]
hex-literal = "0.3.1"
near-sdk = "4.0.0-pre.7"
near-sdk-sim = "4.0.0-pre.7"
num-format = "0.4.0"
secp256k1-test = { package = "secp256k1", version = "0.20.3", features = ["rand-std", "recovery"] }
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", features = ["keccak"], default-features = false }
# remember to include related mock contracts
mock-appchain-registry = { path = "../mock-appchain-registry" }
mock-oct-token = { path = "../mock-oct-token" }
