[package]
name = "appchain-anchor"
version = "2.2.0"
authors = ["Octopus Network"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git", branch = "main" }
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
hex = "0.4.2"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
getrandom = { version = "0.2", features = ["custom"] }
ed25519-dalek = { version = "1.0.1", features = ["alloc"] }
