[package]
name = "beefy-light-client"
version = "0.1.0"
authors = ["Julian Sun <julian@oct.network>"]
edition = "2018"

[dependencies]
borsh = "0.8.1"
beefy-merkle-tree = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.12", features = ["keccak"], default-features = false }
byteorder = { version = "1", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
libsecp256k1 = { version = "0.7.0", features = ["static-context"], default-features = false }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"beefy-merkle-tree/std",
	"byteorder/std",
	"codec/std",
	"libsecp256k1/std",
]
